--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
+h3 {
+  color: brown;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
